--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
         <footer>
             <div class="row ">
                 <div class="col-lg-3 col-md-6 col-sm-12 my-4">
-                    <p>E-comerthe</p>
+                    <p>E-commerce</p>
                     <p>responsive</p>
                     <p>fashion</p>
                     <p>food</p>
